fix: overflow html

--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -11,6 +11,10 @@ main.section {
     }
 }
 
+html {
+    overflow: auto !important;
+}
+
 #create-post {
     position: fixed;
     bottom: 20px;
